# branchgen-new

./: Cargo.toml  README.md
src/: actions.rs  app.rs  cli.rs  config.rs  config_template.rs  error.rs  generator.rs  git.rs  main.rs  state.rs  storage.rs
src/ui/: form.rs  history.rs  layout.rs  mod.rs  result.rs
