[package]
name = "branchgen"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui    = "0.27"
crossterm  = "0.27"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.8"
thiserror  = "1"
clap       = { version = "4", features = ["derive"] }
directories = "6.0.0"